Mostly cleaning up error reporting.
